# efficiency-nodes-ED

./: README.md  README_KR.md  Start.bat  __init__.py  disable.py  ed_server.py  efficiency_nodes_ED.py  enable.py  install.py  modify_workflow.bat  modify_workflow.py  pyproject.toml  uninstall.py
.github/workflows/: publish.yml
html_resource/: category_map.json  category_map.txt  widgethider.js
js/: ed_appearance.js  ed_betterCombos.js  ed_comboWidget.js  ed_common.js  ed_dynamicWidgets.js  ed_getBooruTag.js  ed_loraMenu.js  ed_properties.js  ed_seedcontrol.js  ed_setProperties.js  ed_widgethider.js  ed_wildcardSelect.js  ed_wildcard_select.js
js/json/: categoryPriority.json  tag_category.json  tag_category2.json
js/json/tags_by_category/: artist.json  character.json  copyright.json  meta.json
js/node_options/: ed_addScripts.js  ed_addXYinputs.js  ed_modelInfo.js  ed_setResolution.js  ed_swapScripts.js  ed_swapXYinputs.js
js/node_options/common/: modelInfoDialog.js  utils.js
js/rgthree_util/: dialog_info.js  ed_css.js  rgthree_api.js  shared_utils.js  svgs.js
user_css/: user.css
workflows/: General-purpose workflows.json  main_workflow.json
