[project]
name = "efficiency-nodes-ED"
description = "Expansion of Efficiency Nodes for ComfyUI. Significant UX improvements.[w/NOTE: This node requires [a/Efficiency Nodes for ComfyUI Version 2.0+](https://github.com/jags111/efficiency-nodes-comfyui) and [a/ComfyUI-Custom-Scripts](https://github.com/pythongosssss/ComfyUI-Custom-Scripts). You need to run start.bat]"
version = "0.7.3"
license = { file = "LICENSE" }
dependencies = []

[project.urls]
Repository = "https://github.com/NyaamZ/efficiency-nodes-ED"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "nyaamz"
DisplayName = "Efficiency Nodes ExtendeD"
Icon = "https://upload.wikimedia.org/wikipedia/commons/d/d5/Speech_balloon_green_icon.svg"
