[project]
name = "efficiency-nodes-ED"
description = "Expansion of Efficiency Nodes for ComfyUI. Significant UX improvements.[w/NOTE: This node requires [a/efficiency-nodes-comfyui](https://github.com/jags111/efficiency-nodes-comfyui) and [a/rgthree-comfy](https://github.com/rgthree/rgthree-comfy); it also requires start.bat to run.]"
version = "0.9.1"
license = { file = "LICENSE" }
dependencies = []

[project.urls]
Repository = "https://github.com/NyaamZ/efficiency-nodes-ED"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "nyaamz"
DisplayName = "efficiency-nodes-ED"
Icon = "https://upload.wikimedia.org/wikipedia/commons/d/d5/Speech_balloon_green_icon.svg"
